-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.805 2010-10-24 21:31:43 jluis Exp $
-----------------------------------------------------------------------------------------

-----------------------------------------------------------------------------------------
2010-11-01	pwessel
	* GMT 4.5.4 finalized and released. GMT 5.0.0alpha announced, get via cvs
-----------------------------------------------------------------------------------------
2010-10-24	jluis
	* gmtdefaults:		Still had one free() that should be GMT_free (Win crash)

2010-10-19	pwessel
	* gmtswitch:		Given D it picks the first entry in .gmtversions. Also
				is now installed with rest of executables.
	* mapproject.c		Did not show/explain the option of appending + to -L.
				Corrected synopsis, usage, and man page.

2010-10-17	pwessel
	* grdpaste.c:		Lacked -fg so could not paste 352/360 and 0/8 in longitudes.

2010-10-14	pwessel
	* psbasemap.c:		The -L option had trouble parsing if there were + signs
				in the label string.
	* pscoast.c:		---"---
	
2010-10-13	pwessel
	* mapproject.c:		Did not reset azimuth to NaN at start of next segment.
	* psscale.c:		Give warning and skip any command-line file arguments.
	* pscoast.c:		Give warning and skip any command-line file arguments.
	* psbasemap.c:		Give warning and skip any command-line file arguments.

2010-10-05	pwessel
	* configure.ac:		Set correct mex extensions for 64-bit version.
	
2010-09-29	pwessel
	* share/time/hi.d:	Added Hawaiian time language items.

2010-09-28	remko
	* gmt_mgg.c:		Use GMT_getsharepath to find gmtfile_paths file.

2010-09-27	pwessel
	* gmt_map.c:		Did not check if nodes were beyond the horizon in GMT_grd_project.
				Also did not initialize output grid to NaNs before filling.

2010-09-20	pwessel
	* ps2raster.c:		Made tolerant of \r-only line-endings.

2010-09-15	pwessel
	* sph/Makefile:		Did not have LDFLAGS in link statement.

2010-09-07	pwessel